[gd_scene load_steps=6 format=3 uid="uid://dnh12ykp6bhmr"]

[ext_resource type="Script" uid="uid://b15lxi6pd5dqc" path="res://scripts/ui/BattleUIContainer.gd" id="1_6xwfv"]
[ext_resource type="PackedScene" uid="uid://c828fvnscprqf" path="res://scenes/ui/Battle/UnitActionMenu.tscn" id="1_agn2j"]
[ext_resource type="PackedScene" uid="uid://c305inhdmiai4" path="res://scenes/ui/Battle/UnitOverviewUI.tscn" id="2_6xwfv"]
[ext_resource type="PackedScene" uid="uid://ctfept6poc1js" path="res://scenes/ui/Battle/BattleForecast.tscn" id="4_4y5n0"]
[ext_resource type="PackedScene" uid="uid://dsqr2tln6tnyy" path="res://scenes/ui/Battle/BattleMenu.tscn" id="5_u4b37"]

[node name="BattleUiContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6xwfv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
offset_right = 144.0
offset_bottom = 155.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="UnitActionMenu" parent="Panel/MarginContainer" instance=ExtResource("1_agn2j")]
layout_mode = 2

[node name="UnitOverviewUI" parent="Panel/MarginContainer" instance=ExtResource("2_6xwfv")]
layout_mode = 2

[node name="BattleForecast" parent="Panel/MarginContainer" instance=ExtResource("4_4y5n0")]
layout_mode = 2

[node name="BattleMenu" parent="Panel/MarginContainer" instance=ExtResource("5_u4b37")]
layout_mode = 2
